<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/header_login"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <com.inwi.clubinwi.views.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/good"
                android:textColor="@color/pink"
                android:textSize="15sp" />

            <com.inwi.clubinwi.views.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/code_reset_password"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <com.inwi.clubinwi.views.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/reset_password_sent"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/valider"
            android:layout_below="@+id/ll">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/password_oublier" />
        </RelativeLayout>

        <com.inwi.clubinwi.views.MyTextView
            android:id="@+id/valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corners_pink"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/connexion"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>