<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    custom:layout_constraintTop_toTopOf="parent">


    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@drawable/snow_android" />


    <!--<ImageView
                android:id="@+id/snow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:src="@drawable/snow_android" />-->

    <ImageView
        android:id="@+id/ribbons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ribbons_android"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:elevation="5dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/check_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                custom:srcCompat="@drawable/check_android" />

            <com.inwi.clubinwi.views.MyTextView
                android:id="@+id/felicitation_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/congratulation"
                android:textSize="20sp"
                android:visibility="gone"
                app:font_style="bold" />

            <com.inwi.clubinwi.views.MyTextView
                android:id="@+id/message_succes_annif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/congratulation_message_annif"
                android:textSize="13sp"


                custom:font_style="light" />

            <com.inwi.clubinwi.views.MyTextView
                android:id="@+id/cadeau_annif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/cadeau_annif"
                android:textColor="@color/pink"
                android:visibility="visible"
                app:font_style="bold" />
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/felicitations"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.inwi.clubinwi.views.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/congratulation"
            android:textColor="@color/pink"
            android:textSize="20sp"
            custom:font_style="light" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.inwi.clubinwi.views.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_number"
                android:textColor="#1d1d26"
                android:textSize="13sp"
                custom:font_style="light" />

            <com.inwi.clubinwi.views.MyTextView
                android:id="@+id/myTextViewNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/pink"
                android:textSize="13sp"
                custom:font_style="light" />

            <com.inwi.clubinwi.views.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parenthese"
                android:textColor="#1d1d26"
                android:textSize="13sp"
                custom:font_style="light" />
        </LinearLayout>

        <com.inwi.clubinwi.views.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/was_added_with_succes"
            android:textColor="#1d1d26"
            android:textSize="13sp"
            custom:font_style="light" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="#e9e9e9" />

    <com.inwi.clubinwi.views.MyTextView
        android:id="@+id/myTextViewOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/ok"
        android:textColor="@color/pink"
        android:textSize="20sp"
        android:visibility="gone"
        custom:font_style="light" />

</RelativeLayout>