<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <ImageView
                    android:id="@+id/image_tombola"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:scaleType="fitXY"
                     />
               <!-- android:src="@drawable/slider_android"
                                    android:layout_height="220dp"
-->


                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:visibility="gone"
                    android:layout_marginTop="210dp"
                    android:background="@drawable/background_rounded_courners_yellow"
                    android:gravity="center"
                    android:text="@string/tombola_city"
                    android:textColor="@android:color/black"
                    android:textSize="11sp" />

                <ImageView
                    android:id="@+id/icon_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="205dp"
                    android:src="@drawable/share"
                    android:clickable="true"
                    android:visibility="visible" />
            </FrameLayout>

            <com.inwi.clubinwi.views.MyTextView
                android:id="@+id/annif_tombola_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frame"
                android:layout_marginStart="20dp"
                android:text="@string/description_tombola_anniversaire_titre"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
            <com.inwi.clubinwi.views.MyTextView
                android:id="@+id/annif_tombola_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/annif_tombola_titre"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="4dp"


                android:text="@string/description_tombola_anniversaire_content"
                android:textColor="@color/black"
                />

            <CheckBox
                android:id="@+id/accept_chexbox_annif"
                style="@style/CustomCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/annif_tombola_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp" />

            <com.inwi.clubinwi.views.MyTextView
                android:id="@+id/accept_reglement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/annif_tombola_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:textDirection="anyRtl"
                android:layout_toEndOf="@+id/accept_chexbox_annif"
                android:background="?attr/selectableItemBackground"
                android:maxLines="1"
                android:text="@string/reglement_annif"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <Button
                android:id="@+id/participate_annif"
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:layout_below="@+id/accept_reglement"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_tombola_participate"
                android:enabled="false"
                android:textDirection="anyRtl"
                android:gravity="center"
                android:text="@string/participate"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>